# stealthos

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TC-stealthos.cmake
bootloader/: boot.s  link.ld  loader.s  out.s
includes/: io.h
iso/: bochsrc.txt  grub.cfg  limine.conf
kernel/: CMakeLists.txt
kernel/boot/: boot.s  link.ld
kernel/include/: apic.h  hhdm.h  interrupts.h  interupts.h  keyboard.h  psf.h  serial.h  tty.h  utils.h  vga.h
kernel/include/interrupts/: apic.h  idt.h  interrupts.h  pic.h
kernel/include/io/: keyboard.h  ps2.h  serial.h
kernel/include/memory/: gdt.h
kernel/include/power/: acpi.h  apci.h  madt.h  tables.h
kernel/src/: apic.c  hhdm.c  interrupts.c  interrupts.s  kernel.c  keyboard.c  pic.c  psf.c  serial.c  tty.c  utils.c  vga.c
kernel/src/interrupts/: apic.c  idt.c  idt.s  interrrupts.c  pic.c
kernel/src/io/: keyboard.c  ps2.c  serial.c
kernel/src/memory/: gdt.c  gdt.s
kernel/src/power/: acpi.c  madt.c
lib/: CMakeLists.txt  README.md
lib/include/: stdlib.h  string.h
lib/src/: stdlib.c  string.c
src/: io.c  kmain.c
stdlib/: CMakeLists.txt
stdlib/include/: string.h
stdlib/src/: string.c
